# wolfence

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
.wolfence/: config.toml
.wolfence/policy/: receipts.toml
.wolfence/receipts/: push-ui-command.toml  push-ui-protected.toml
Media/icon.icon/: icon.json
Wolfence/: ContentView.swift  WolfenceApp.swift
Wolfence.xcodeproj/: project.pbxproj
WolfenceTests/: WolfenceTests.swift
WolfenceUITests/: WolfenceUITests.swift  WolfenceUITestsLaunchTests.swift
apps/web-console/: README.md  astro.config.mjs  package-lock.json  package.json
docs/: repo-map.md
docs/architecture/: overview.md
docs/development/: audit.md  configuration.md  doctor.md  getting-started.md  json-output.md  prototype-demo.md
docs/security/: audit-chain.md  detection-model.md  live-advisories.md  override-receipts.md  policy-model.md  receipt-approval-policy.md  safety-check-roadmap.md  scanner-inventory.json  scanner-inventory.md  threat-model.md  trust-store.md
docs/ui/: macos-console.md  swiftui-xcode-handoff.md  web-console.md
src/: app.rs  cli.rs  main.rs  test_support.rs
src/commands/: audit.rs  baseline.rs  config.rs  doctor.rs  hook_pre_push.rs  init.rs  json.rs  mod.rs  protected.rs  push.rs  receipt.rs  scan.rs  trust.rs  ui.rs
src/core/: audit.rs  config.rs  context.rs  finding_baseline.rs  finding_history.rs  findings.rs  git.rs  github_governance.rs  hooks.rs  mod.rs  orchestrator.rs  osv.rs  policy.rs  receipt_policy.rs  receipts.rs  scanners.rs  trust.rs
(+114 files in other folders)
